--- a/index.html
+++ b/index.html
@@ -5,33 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <title>FrontCat&Dog</title>
 </head>
 
 <body>
     <header>
-        <div style="background-color: black;">
-            <p style="color:#F3F3F3">Grandes ofertas en comederos</p>
+        <div>
+            <p class="top">Grandes ofertas en comederos</p>
+            <div class="menu">
+                <span class="top">Español <i class="fas fa-angle-down"></i></span>
+                <span class="top">ARG$ <i class="fas fa-angle-down"></i></span>
+            </div>
         </div>
-        <div style="background: #F0A83E;">
-            <img src="img/Logo.png" alt="Logo">
+        <div class="contenedor">
+            <img class="logo" src="img/Logo.png" alt="Logo">
             <nav>
-                <a href="" style="color:#F3F3F3"><img src="img/pawprint 1.png" alt="pawprint">Categorías</a>
-                <a href="" style="color:#F3F3F3"><img src="img/pawprint 1.png" alt="pawprint">Pets</a>
-                <a href="" style="color:#F3F3F3"><img src="img/pawprint 1.png" alt="pawprint">Nosotros</a>
-                <a href="" style="color:#F3F3F3"><img src="img/pawprint 1.png" alt="pawprint">Contactanos</a>
+                <a href="" style="color:#F3F3F3"><img src="img/pawprint 1.png" alt="pawprint" class="pawprint">Categorías</a>
+                <a href="" style="color:#F3F3F3"><img src="img/pawprint 1.png" alt="pawprint" class="pawprint">Pets</a>
+                <a href="" style="color:#F3F3F3"><img src="img/pawprint 1.png" alt="pawprint" class="pawprint">Nosotros</a>
+                <a href="" style="color:#F3F3F3"><img src="img/pawprint 1.png" alt="pawprint" class="pawprint">Contactanos</a>
             </nav>
         </div>
     </header>
     <main>
-        <section>
-            <img src="img/foto.png" alt="">
+        <section class="banner">
             <h2>¡Es un placer tenerte aqui!</h2>
             <p>¡Comederos en descuento!</p>
-            <p>COMEDEROS</p>
+            <p class="boton">COMEDEROS</p>
         </section>
-        <section>
-            <img src="img/pawprint 2.png" alt="pawprint">
+        <section class="principal">
+            <img class="paw" src="img/pawprint 2.png" alt="pawprint">
             <h1>Productos Destacados</h1>
             <nav>
                 <p><a href="#Comederos">Comederos</a> -
@@ -39,22 +46,42 @@
                     <a href="#Comida">Comida</a>
                 </p>
             </nav>
-            <article><img src="img/churrasquito.png" alt="Churrasquito">Juquete Churrasquito
+            <article class="articulo">
+                <img src="img/churrasquito.png" alt="Churrasquito">
+                <h3> Juquete Churrasquito</h3>
                 <p>$150</p>
             </article>
-            <article><img src="img/comedero.png" alt="Comedero para perros">Comedero para perros
+            <article class="articulo">
+                <img src="img/comedero.png" alt="Comedero para perros">
+                <h3> Comedero para perros</h3>
                 <p>$150</p>
             </article>
-            <article><img src="img/Huesito.png" alt="Juguete Huesito">Juguete Huesito
+            <article class="articulo">
+                <img src="img/Huesito.png" alt="Juguete Huesito">
+                <h3> Juguete Huesito</h3>
                 <p>$150</p>
             </article>
         </section>
     </main>
     <footer>
-        <div style="background: #F0A83E"></div>
-        <div style="background: #3C2313"></div>
-        <div style="background: #222222">
-            <p style="color:#F3F3F3">Todos los derechos reservados Front End</p>
+        <div class="enviarCorreo">
+            <img src="img/enviar-correo 1.png" alt="enviar-correo">
+            <p>Suscríbete para más novedades</p>
+        </div>
+        <div class="contacto">
+            <img src="img/Icono.png" alt="Localidad">
+            <h3>Localidad</h3>
+            <p>Calle - provincia</p>
+            <img src="img/Icono (1).png" alt="Telefono">
+            <h3>Teléfono</h3>
+            <p>Número de teléfono</p>
+            <img src="img/Icono (2).png" alt="Correo electrónico">
+            <h3>Correo Electrónico</h3>
+            <p>Dirección de correo</p>
+            <img src="img/Logo2.png" alt="Logo2">
+        </div>
+        <div>
+            <p class="fondo">Todos los derechos reservados Front End</p>
         </div>
     </footer>
 </body>
